--- a/ImporteVehiculos/Reportes/ReporteCuentasPagar.rdlc
+++ b/ImporteVehiculos/Reportes/ReporteCuentasPagar.rdlc
@@ -788,6 +788,7 @@
                               <Style>
                                 <FontFamily>Bookman Old Style</FontFamily>
                                 <FontSize>8pt</FontSize>
+                                <Format>N2</Format>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -906,7 +907,7 @@
         <Top>0.20833in</Top>
         <Left>0.125in</Left>
         <Height>0.625in</Height>
-        <Width>8.33672in</Width>
+        <Width>8.33673in</Width>
         <Style>
           <Border>
             <Style>None</Style>
